[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
default-run = "serve"

[[bin]]
name = "serve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
notify = "6.0.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tower-livereload = "0.7.3"
pulldown-cmark = "0.8.0"
anyhow = "1"
walkdir = "2"